umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_0062_O1C(CC(=O)[O-])C=CC1_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: InvalidToken
    message: Invalid token at position 22
opensmiles:
  success: false
  error:
    error_type: InvalidToken
    message: Invalid token at position 22
