umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_0063_C(C(CCC([O-])=O)=O)(_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: InvalidToken
    message: Invalid token at position 122
opensmiles:
  success: false
  error:
    error_type: InvalidToken
    message: Invalid token at position 122
